[gd_scene load_steps=7 format=4 uid="uid://c6s4lis3gfsex"]

[ext_resource type="Script" uid="uid://4qvb2l5btcvx" path="res://scenes/milestone_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cpkni7sy0o2sx" path="res://textures/icons/processor.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dm7wykmwilp8i" path="res://textures/icons/atom.png" id="3"]

[sub_resource type="Animation" id="Animation_2kie7"]
resource_name = "Available"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IconPanel/Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.3), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iel5m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IconPanel/Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ktk7"]
_data = {
&"Available": SubResource("Animation_2kie7"),
&"RESET": SubResource("Animation_iel5m")
}

[node name="MilestonePanel" type="Panel"]
custom_minimum_size = Vector2(0, 150)
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
theme_type_variation = &"MenuPanelTitle"
script = ExtResource("1")

[node name="IconPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 15.0
offset_top = 15.0
offset_right = 115.0
offset_bottom = 115.0
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"BackPanel"

[node name="Icon" type="TextureRect" parent="IconPanel"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 35)
texture = ExtResource("2")
expand_mode = 1

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 130.0
offset_top = 8.0
offset_right = -134.0
offset_bottom = 120.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = -4
alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="InfoContainer/NameContainer"]
layout_mode = 2
text = "System"

[node name="Count" type="Label" parent="InfoContainer/NameContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
text = "[Lv.1]"

[node name="QueueCount" type="Label" parent="InfoContainer/NameContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
text = "+1"

[node name="Description" type="Label" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
theme_override_constants/line_spacing = -4
text = "Multiplicatively increases all components' performance by 100%"
vertical_alignment = 1
autowrap_mode = 3

[node name="CostContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -73.0
offset_right = -15.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="CostContainer"]
self_modulate = Color(1, 0.521569, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3")
expand_mode = 1

[node name="Label" type="Label" parent="CostContainer"]
self_modulate = Color(1, 0.521569, 0, 1)
layout_mode = 2
text = "1"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -23.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"MenuProgressBar"
max_value = 1.0
step = 0.001
value = 0.23
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6ktk7")
}
